--- a/css/styles.css
+++ b/css/styles.css
@@ -525,14 +525,14 @@ color: #212121;
     appearance: none;
 }
 .checkmark {
-position: absolute;
-margin-top: 3px;
-margin-left: -1.4em;
-width: 16px;
-height: 15px;
-background-image: url(../images/check-off.svg);
-background-repeat: no-repeat;
-background-size: containt;
+    position: absolute;
+    margin-top: 3px;
+    margin-left: -1.4em;
+    width: 16px;
+    height: 15px;
+    background-image: url(../images/check-off.svg);
+    background-repeat: no-repeat;
+    background-size: containt;
 }
 .check-box:checked + .checkmark {
     background-image: url(../images/check-on.svg);
@@ -548,30 +548,31 @@ background-size: containt;
     justify-content: center;
 }
 .form-button {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 20px;
-        padding: 10px 80px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+    padding: 10px 80px;
     
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.62;
-        letter-spacing: 0.03em;
-        background-color: var(--accent-color);
-        color: var(--hero-button);
-        border-radius: 4px;
-        border: none;
-        cursor: pointer;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    letter-spacing: 0.03em;
+    background-color: var(--hero-button);
+    color: var(--accent-color);
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: 1px solid var(--accent-color);
+    cursor: pointer;
+    transition: background-color 250ms var(--cubic-bezier), color 250ms var(--cubic-bezier);
 }
 .form-button:hover,
 .form-button:active,
 .form-button:focus {
 
-    background-color: var(--hero-button);
-    color: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    background-color: var(--accent-color);
+    color: var(--hero-button);
 
 }
 
