--- a/css/styles.css
+++ b/css/styles.css
@@ -419,18 +419,7 @@ color: #212121;
 }
 
 .js-speaker-form {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    
-    width: 448px;
-    height: 342px;
-
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    width: 100%;
 }
 
 .form-field {
@@ -483,7 +472,7 @@ color: #212121;
 }
 .form-comment {
     padding: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 
     font-weight: 400;
     font-size: 12px;
@@ -570,6 +559,7 @@ color: #212121;
 .form-button {
     display: flex;
     justify-content: center;
+    margin-top: 30px;
     margin-bottom: 20px;
     padding: 10px 80px;
     
@@ -1092,8 +1082,7 @@ color: #212121;
 .footer-box {
     display: block;
     justify-content: center;
-    gap: 10px;
-    margin-left: 55px;
+    margin-left: 94px;
 
 }
 .footer-title {
@@ -1179,7 +1168,7 @@ display: flex;
 .footer-button {
     display: flex;
     align-items: center;
-    padding: 10px 48px;
+    padding: 10px 40px;
     margin-left: 12px;
 
     
